    with the trajectory are no longer assigned the prefix `trajectory`.
    Results and derived parameters added during single runs are now sorted into
    `runs.run_XXXXXXXXX`.

*   Useless shortcuts have been removed.

*   New *Backwards* search functionality

*   New `f_get_all` functionality to find all items in a tree matching a particular
    search string

pypet 0.1b.3

*   BUG FIX: Now `f_run` and `f_continue_run` of an environment return the results
    produced by `runfunc`

*   You can enforce a type convert for exploration

*   Added lazy_debug option for the environment

*   If you don't specify a filename, the environment defaults to a file with the name of
    the trajectory

*   New multiprocessing mode (`use_pool=False` for environment) to spawn individual processes
    for each run. Useful if data cannot be pickled.

*   New Brian framework with NetworkManager, NetworkComponent, NetworkAnalyser,
    NetworkRunner and DurationParameter

*   Components, Analysers and the network runner of the manager are now publicly available

*   Every component now provides the function `set_logger` to enable logging and instantiate a
    logger for `self.logger`

*   Now Pypet allows compression of HDF5 files, these can yield a massive reduction in
    memory space.

*   `tr`, `cr`, `current_run`, `param`, `dparam` are no longer supported as a shortcuts

*   __getitem__ is equivalent to __getattr__

pypet 0.1b.2

*   DefaultReplacementError is now called PresettingError

*   Now the runtime of single runs is measured and stored.

*   __getitem__ of the trajectory always returns the instance and fast access is not applied

*   PickleResult and PickleParameter support the choice of protocol

*   Explored Sparse matrices are stored under a slightly different name to disk.

*   BUG FIX: BFS works properly

*   BUG FIX: f_iter_runs is now affected if f_as_run is chosen

*   Annotations support __iter__

*   Annotations support __getitem__
