@@ -47,6 +47,8 @@ pypet 0.1b.4
 *   New `f_get_all` functionality to find all items in a tree matching a particular
     search string
 
+*   Pandas Series and Panels are now supported, too!
+
 pypet 0.1b.3
 
 *   BUG FIX: Now `f_run` and `f_continue_run` of an environment return the results
